# fastapi-cloud-cli

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  pdm_build.py  pyproject.toml  release-notes.md  requirements-tests.txt
.github/: dependabot.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: bump-pre-commit-hooks.yml  create-draft-release.yml  guard-dependencies.yml  issue-manager.yml  labeler.yml  latest-changes.yml  lint.yml  pre-commit.yml  prepare-release.yml  publish-private.yml  publish.yml  smokeshow.yml  test-redistribute.yml  test.yml  zizmor.yml
scripts/: lint.sh  test.sh
src/fastapi_cloud_cli/: __init__.py  cli.py  config.py  context.py  trigger.py
src/fastapi_cloud_cli/commands/: deploy.py  deployments.py  env.py  link.py  login.py  logout.py  logs.py  new.py  reset.py  setup_ci.py  teams.py  whoami.py
src/fastapi_cloud_cli/commands/apps/: __init__.py  create.py  get.py  link.py  list.py  unlink.py
src/fastapi_cloud_cli/commands/auth/: __init__.py  wait.py
src/fastapi_cloud_cli/commands/ci/: __init__.py
src/fastapi_cloud_cli/commands/deploy/: archive.py  command.py  configure.py  upload.py  wait.py  waitlist.py
src/fastapi_cloud_cli/commands/env/: __init__.py  _shared.py  delete.py  get.py  list.py  set.py
src/fastapi_cloud_cli/commands/teams/: __init__.py  get.py
src/fastapi_cloud_cli/commands/tokens/: __init__.py
src/fastapi_cloud_cli/utils/: api.py  apps.py  auth.py  cli.py  errors.py  execution.py  progress_file.py  pydantic_compat.py  rich_ansi.py  sentry.py  version_check.py
tests/: conftest.py  test_api_client.py  test_archive.py  test_auth.py  test_cli.py  test_cli_apps.py  test_cli_ci.py  test_cli_deploy.py  test_cli_deployments.py  test_cli_link.py  test_cli_login.py  test_cli_logout.py  test_cli_new.py  test_cli_reset.py  test_cli_setup_ci.py  test_cli_teams.py  test_cli_tokens.py  test_cli_unlink.py  test_cli_whoami.py  test_config.py  test_dates.py  test_deploy_utils.py  test_env_delete.py  test_env_get.py  test_env_list.py  test_env_set.py  test_logs.py  test_prepare_release.py  test_progress_file.py  test_rich_ansi.py  test_sentry.py  test_utils_apps.py  test_version_check.py  utils.py
